--- a/source/assets/stylesheets/pages/_home.scss
+++ b/source/assets/stylesheets/pages/_home.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 3em 0;
 }
 
 .home-intro {
@@ -27,6 +28,7 @@
   }
 
   .logo {
+    max-width: 100%;
     height: 18.75em;
 
     .body {
